--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-calendar": "*"
     },
     "config": {
         "allow-plugins": {
@@ -100,7 +101,6 @@
         "symfony/css-selector": "7.0.*",
         "symfony/debug-bundle": "7.0.*",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "7.0.*",
         "symfony/web-profiler-bundle": "7.0.*"
     }
